[package]
name = "hyperliquid_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperliquid_rust_sdk = "0.3.0"
ethers = {version = "0.17", features = ["eip712", "abigen"]}
tokio = { version = "1", features = ["full"] }
log = "0.4.19"
lazy_static = "1.4.0"
serde = "1.0.198"
reqwest = { version = "0.12.4", features = ["json"] }
